--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <p><strong>QRIS</strong><br>
             <button onclick="showPopup('qrisPopup')">📸 Klik Disini</button>
             <br>
-            <span style="color: yellow;">📸 Screenshot bukti transfer di bagian detail transaksi, Dan Jangan Lupa Uploud Di Formulir Di Halaman Selanjutnya⚠️.</span>
+            <span style="color: yellow;">📸 Screenshot bukti transfer di bagian detail transaksi, tidak bisa dari histori biasa.</span>
         </p>
         <button class="lanjut" onclick="showPopup('formPopup')">✅ Lanjut ke Formulir</button>
     </div>
@@ -80,7 +80,7 @@
 
     <div id="formPopup" class="popup">
         <h2>✅ Formulir Top Up</h2>
-        <iframe src="https://forms.gle/4AeFKAAKyUDZzQJB6" style="width: 100%; height: 750px; border-radius: 10px;"></iframe>
+        <iframe src="https://forms.gle/FbKjYdFD8nDrUrXEA" style="width: 85%; height: 450px; border-radius: 10px;"></iframe>
         <p style="color: yellow;">📸 Screenshot bukti TF & isi formulir lalu pencet tombol kirim di bagian formulir lalu chat admin untuk konfirmasi!</p>
         <button onclick="closePopup()">❌ Tutup</button>
         <button class="lanjut" onclick="showPopup('adminPopup')">➡ Pilih Admin WhatsApp</button>
