--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zeet Hosting - Top Up Game Termurah</title>
+    <title>Zeet Hosting - Top Up Game Termurah Dan Cepat 100% aman</title>
     <style>
         body { font-family: Arial, sans-serif; background-color: #1e2b32; color: white; text-align: center; }
         header { background: #142024; padding: 10px; position: relative; }
