--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 <body>
     <header>
         <marquee behavior="scroll" direction="left" scrollamount="7">
-            <strong>🔥 ZEET HOSTING - TOP UP CEPAT, MURAH & TERPERCAYA! 🚀💎⚡</strong>
+            <strong>🔥 ZEET HOSTING - TOP UP CEPAT, MURAH & TERPERCAYA 100% AMAN! 🚀💎⚡</strong>
         </marquee>
         <img src="LogoPerus.jpg" alt="Logo Perusahaan" class="logo">
-        <h1>🔥 Zeet Hosting - Top Up Game Termurah 🔥</h1>
+        <h1>🔥 Zeet Hosting🤖 - Top Up Game Termurah 🔥</h1>
     </header>
 
     <section id="home">
@@ -65,16 +65,16 @@
         <p><strong>GOPAY</strong><br>📞 0895602220906</p>
         <p><strong>OVO</strong><br>📞 0895352140495</p>
         <p><strong>QRIS</strong><br>
-            <button onclick="showPopup('qrisPopup')">📸 Klik Disini</button>
+            <button onclick="showPopup('qrisPopup')">📸 Klik</button>
             <br>
-            <span style="color: yellow;">📸 Screenshot bukti transfer di bagian detail transaksi, tidak bisa dari histori biasa.</span>
+            <span style="color: yellow;">📸 Jangan Lupa Screnshot Bukti Transfer.</span>
         </p>
         <button class="lanjut" onclick="showPopup('formPopup')">✅ Lanjut ke Formulir</button>
     </div>
 
     <div id="qrisPopup" class="popup">
         <h2>📸 QRIS Zeet Hosting</h2>
-        <img src="https://files.catbox.moe/zc9x4l.jpg" alt="QRIS Zeet Hosting" style="width: 350px; border-radius: 10px;">
+        <img src="https://files.catbox.moe/zc9x4l.jpg" alt="QRIS Zeet Hosting🪸" style="width: 350px; border-radius: 10px;">
         <button onclick="closePopup('qrisPopup', true)">❌ Tutup</button>
     </div>
 
@@ -83,13 +83,13 @@
         <iframe src="https://forms.gle/FbKjYdFD8nDrUrXEA" style="width: 85%; height: 450px; border-radius: 10px;"></iframe>
         <p style="color: yellow;">📸 Screenshot bukti TF & isi formulir lalu pencet tombol kirim di bagian formulir lalu chat admin untuk konfirmasi!</p>
         <button onclick="closePopup()">❌ Tutup</button>
-        <button class="lanjut" onclick="showPopup('adminPopup')">➡ Pilih Admin WhatsApp</button>
+        <button class="lanjut" onclick="showPopup('adminPopup')">➡ Klik Untuk Pilih Admin WhatsApp</button>
     </div>
 
     <div id="adminPopup" class="popup">
         <h2>📞 Pilih Admin WhatsApp</h2>
-        <button class="lanjut" onclick="window.location.href='https://wa.me/62895602220906'">Admin 1</button>
-        <button class="lanjut" onclick="window.location.href='https://wa.me/62895352140495'">Admin 2</button>
+        <button class="lanjut" onclick="window.location.href='https://wa.me/62895602220906'">Admin 1 (Kurang Fast Respon)</button>
+        <button class="lanjut" onclick="window.location.href='https://wa.me/62895352140495'">Admin 2(Fast Respon)</button>
     </div>
 
     <script>
