--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <strong>🔥 ZEET HOSTING - TOP UP CEPAT, MURAH & TERPERCAYA 100% AMAN! 🚀💎⚡</strong>
         </marquee>
         <img src="LogoPerus.jpg" alt="Logo Perusahaan" class="logo">
-        <h1>🔥 Zeet Hosting🤖 - Top Up Game Termurah 🔥</h1>
+        <h1>🔥 Cari Top Up Game Aman Dan Proses Cepat Ke Zeet Hosting Aja👌 - Top Up Game Termurah 🔥</h1>
     </header>
 
     <section id="home">
