--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <strong>🔥 ZEET HOSTING - TOP UP CEPAT, MURAH & TERPERCAYA 100% AMAN! 🚀💎⚡</strong>
         </marquee>
         <img src="LogoPerus.jpg" alt="Logo Perusahaan" class="logo">
-        <h1>🔥 Cari Top Up Game Aman Dan Proses Cepat Ke Zeet Hosting Aja👌 - Top Up Game Termurah 🔥</h1>
+        <h1>🔥 Cari Top Up Game Aman Dan Proses Cepat  - Top Up Game Termurah 🔥</h1>
     </header>
 
     <section id="home">
@@ -40,21 +40,21 @@
     <div id="ffPopup" class="popup">
         <h2>💎 Harga Diamond Free Fire</h2>
         <img src="harga_ff.jpg" alt="Daftar Harga Free Fire" class="price-image">
-        <button onclick="closePopup()">❌ Tutup</button>
+        <button onclick="closePopup()">❌ Keluar</button>
         <button class="lanjut" onclick="showPopup('paymentPopup')">✅ Lanjut ke Pembayaran</button>
     </div>
 
     <div id="pubgPopup" class="popup">
         <h2>🎮 Harga UC PUBG</h2>
         <img src="harga_pubg.jpg" alt="Daftar Harga PUBG" class="price-image">
-        <button onclick="closePopup()">❌ Tutup</button>
+        <button onclick="closePopup()">❌ Keluar</button>
         <button class="lanjut" onclick="showPopup('paymentPopup')">✅ Lanjut ke Pembayaran</button>
     </div>
 
     <div id="mlPopup" class="popup">
         <h2>💎 Harga Diamond Mobile Legends</h2>
         <img src="harga_ml.jpg" alt="Daftar Harga Mobile Legends" class="price-image">
-        <button onclick="closePopup()">❌ Tutup</button>
+        <button onclick="closePopup()">❌ Keluar</button>
         <button class="lanjut" onclick="showPopup('paymentPopup')">✅ Lanjut ke Pembayaran</button>
     </div>
 
